# llm_engineering-self-

./: .gitignore  README.md  pyproject.toml  requirements.txt
week1/: day1-solution.ipynb  day1.ipynb  day2.ipynb  day4.ipynb  day5(self).ipynb  day5.ipynb  scraper_new.py  spearmint_brochure.md
week2/: day1.ipynb  day2.ipynb  day3.ipynb
