[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipython>=9.8.0",
    "langchain-openai>=1.1.0",
    "litellm>=1.80.8",
    "nest-asyncio>=1.6.0",
    "openai>=2.8.1",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "tiktoken>=0.12.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
